Initial minimum viable product
This is good enough to get started

--- a/ProxysqlAdminUi.Web/appsettings.json
+++ b/ProxysqlAdminUi.Web/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProxySqlContext": "Server=0.0.0.0;Port=6033;Uid=radmin;Pwd=radmin;ConnectionReset=False;Pooling=True;ConnectionLifeTime=3000000;"
+  },
+  "DefaultUsers": [
+    {
+      "Username": "admin",
+      "Password": "AdminAdminAdmin1"
+    }
+  ]
 }
