--- a/.github/workflows/docker-container-builder.yml
+++ b/.github/workflows/docker-container-builder.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Docker Login
         # You may pin to the exact commit or the version.
         # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-        uses: docker/login-action@v2.1.0
+        uses: docker/login-action@v3.3.0
         with:
           # Server address of Docker registry. If not set then will default to Docker Hub
           registry: proget.dotfinity.eu/dotfinity-custom/ # optional
@@ -29,10 +29,10 @@ jobs:
       - name: Build and push Docker images
         # You may pin to the exact commit or the version.
         # uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        uses: docker/build-push-action@v4.0.0
+        uses: docker/build-push-action@v6.9.0
         with:
           # List of additional build contexts (e.g., name=path)
-          context: ../
+          context: .
           # Path to the Dockerfile
           file: ./docker/Dockerfile # optional
           # Push is a shorthand for --output=type=registry
