Readjusted workflow include paths for triggering builds

--- a/.github/workflows/docker-container-builder.yml
+++ b/.github/workflows/docker-container-builder.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "ProxysqlAdminUi.*/**"
+      - "**/ProxysqlAdminUi.*/**"
 jobs:
   build:
     runs-on: ubuntu-latest
