--- a/.github/workflows/docker-container-publish.yml
+++ b/.github/workflows/docker-container-publish.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "ProxysqlAdminUi.*/**"
+      - "**/ProxysqlAdminUi.*/**"
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
