--- a/.github/workflows/docker-container-builder.yml
+++ b/.github/workflows/docker-container-builder.yml
@@ -37,7 +37,7 @@ jobs:
           # Path to the Dockerfile
           file: ./docker/Dockerfile # optional
           build-args: |
-            BUILD_VERSION=${{ steps.date.outputs.date }}-${{ github.run_id }}
+            BUILD_VERSION="${{ steps.date.outputs.date }}-${{ github.run_id }}"
           # Push is a shorthand for --output=type=registry
           push: true # optional, default is false
           # Generate SBOM attestation for the build (shorthand for --attest=type=sbom)
