Fixed docker build versioning

--- a/ProxysqlAdminUi.Web/Dockerfile
+++ b/ProxysqlAdminUi.Web/Dockerfile
@@ -3,26 +3,27 @@ FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 ARG TARGETARCH=amd64
 ARG RUNTIME=linux-musl-x64
-ARG BUILD_VERSION=0.0.0.0-local
+ARG BUILD_VERSION=1.1.1.1-rc1
+EXPOSE 8000
+EXPOSE 7040
 ENV BUILD_VERSION=$BUILD_VERSION
-
 WORKDIR /src
 
-COPY ["ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj", "ProxysqlAdminUi.Web/"]
-RUN dotnet restore --runtime $RUNTIME "./ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj"
+COPY ["ProxysqlAdminUi.Web.csproj", "./"]
+RUN dotnet restore --runtime $RUNTIME "./ProxysqlAdminUi.Web.csproj"
 COPY . .
-WORKDIR "/src/ProxysqlAdminUi.Web"
+WORKDIR "/src"
 
 RUN dotnet build "./ProxysqlAdminUi.Web.csproj" -c $BUILD_CONFIGURATION --runtime $RUNTIME -o /app/build
 
-RUN dotnet publish "./ProxysqlAdminUi.Web.csproj" --runtime $RUNTIME --no-restore -c $BUILD_CONFIGURATION --self-contained -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "./ProxysqlAdminUi.Web.csproj" --runtime $RUNTIME --no-restore -c $BUILD_CONFIGURATION --self-contained -o /app/publish /p:UseAppHost=true 
 
 
 # Enable globalization and time zones:
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
-EXPOSE 8000
+
 
 ENV \
   DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false \
