Added version suffix

--- a/ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj
+++ b/ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj
@@ -11,6 +11,7 @@
 		<EnableSdkContainerDebugging>True</EnableSdkContainerDebugging>
 		<ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:8.0-alpine</ContainerBaseImage>
 		<InformationalVersion>x</InformationalVersion>
+		<VersionSuffix>x</VersionSuffix>
 	</PropertyGroup>
 
 	<ItemGroup>
