--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,8 +3,10 @@ FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 ARG TARGETARCH=amd64
 ARG RUNTIME=linux-musl-x64
-ARG BUILD_VERSION=0.0.0.0-local
+ARG BUILD_VERSION=1.1.1.1
+ARG BUILD_SUFFIX=RC
 ENV BUILD_VERSION=$BUILD_VERSION
+ENV BUILD_SUFFIX=$BUILD_SUFFIX
 
 WORKDIR /src
 
@@ -13,7 +15,9 @@ RUN dotnet restore --runtime $RUNTIME "./ProxysqlAdminUi.Web/ProxysqlAdminUi.Web
 COPY . .
 WORKDIR "/src/ProxysqlAdminUi.Web"
 
-RUN sed -i 's|<InformationalVersion>.*</InformationalVersion>|<InformationalVersion>'"${BUILD_VERSION}"'</InformationalVersion>|g' ProxysqlAdminUi.Web.csproj
+RUN sed -i 's|<InformationalVersion>.*</InformationalVersion>|<InformationalVersion>'${BUILD_VERSION}'</InformationalVersion>|g' ProxysqlAdminUi.Web.csproj
+RUN sed -i 's|<VersionSuffix>.*</VersionSuffix>|<VersionSuffix>'${BUILD_SUFFIX}'</VersionSuffix>|g' ProxysqlAdminUi.Web.csproj
+
 RUN dotnet build "./ProxysqlAdminUi.Web.csproj" -c $BUILD_CONFIGURATION --runtime $RUNTIME -o /app/build
 
 RUN dotnet publish "./ProxysqlAdminUi.Web.csproj" --runtime $RUNTIME --no-restore -c $BUILD_CONFIGURATION --self-contained -o /app/publish /p:UseAppHost=true
