--- a/ProxysqlAdminUi.Web/Dockerfile
+++ b/ProxysqlAdminUi.Web/Dockerfile
@@ -3,7 +3,8 @@ FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 ARG TARGETARCH=amd64
 ARG RUNTIME=linux-musl-x64
-ARG BUILD_VERSION=1.1.1.1-rc1
+ARG BUILD_VERSION=1.1.1.1
+ARG BUILD_SUFFIX=RC
 EXPOSE 8000
 EXPOSE 7040
 ENV BUILD_VERSION=$BUILD_VERSION
