Resolve versioning issues

--- a/ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj
+++ b/ProxysqlAdminUi.Web/ProxysqlAdminUi.Web.csproj
@@ -10,8 +10,7 @@
 		<RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
 		<EnableSdkContainerDebugging>True</EnableSdkContainerDebugging>
 		<ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:8.0-alpine</ContainerBaseImage>
-		<InformationalVersion>x</InformationalVersion>
-		<VersionSuffix>x</VersionSuffix>
+		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 	</PropertyGroup>
 
 	<ItemGroup>
