--- a/ProxysqlAdminUi.Web/appsettings.json
+++ b/ProxysqlAdminUi.Web/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8000"
+      }
+    }
+  },
   "ConnectionStrings": {
     "ProxySqlContext": "Server=0.0.0.0;Port=6033;Uid=radmin;Pwd=radmin;ConnectionReset=False;Pooling=True;ConnectionLifeTime=3000000;"
   },
